<!--
 * @filename  res/values/strings.xml
 * @author    Richard Szeto
 * @ccsfname  rszeto
 * @date      April 23, 2014
 * @objective XML values file that holds
 *            strings for all activities
-->

<resources>

    <string name="app_name">QuizGameUSStates</string>
    <string name="title_activity_quizgame">QuizGame</string>
    <string name="action_settings">Settings</string>
    <string name="splashWelcomeText">Welcome 
        to the US Quiz Game</string>
    <string name="gameWelcomeText">Let\'s Play</string>
    <string name="namePrompt">Insert Your Name Here</string>
    <string name="gameButtonName">US Quiz Game</string>
    <string name="scoreButtonName">Scores</string>
    <string name="submitButtonName">Submit</string>
    <string name="tagName">QuizGameUSStates</string>
    <string name="nameSuccess">Name accepted</string>
    <string name="nameFailure">Name not accepted</string>
    <string name="nameError">You must enter a name 
        before you can play a game</string>
    <string name="insertCapitalText">Type a capital</string>
    <string name="insertStateText">Type a state</string>
    <string name="emptyField">Either an field is empty or you did not 
        press Enter after typing in answer</string>
    <string name="answerSuccess">Answer accepted</string>
    <string name="answerFailure">Answer not accepted</string>
    <string name="scoreFailure">Score was not recorded</string>
    <string name="scoreResult">Your score is </string>
    <string name="title_activity_scores">Scores</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="scoresWelcomeText">High Scores</string>
    
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>
    <string name="sixth">6th</string>
    <string name="seventh">7th</string>
    <string name="eighth">8th</string>
    <string name="ninth">9th</string>
    <string name="tenth">10th</string>

</resources>
